# f1tenth_lab8

./: .~lock.F1Tenth_Lab8_Memo.docx#  F1Tenth_Lab8_Memo.docx  README.md
apriltag_ros/apriltag_ros/config/: camera_info.yaml  tags.yaml
lab8/: CMakeLists.txt  package.xml
lab8/script/: detection.py
usb_cam/nodes/: usb_cam_node.cpp
yolov5_ROS/: requirements.txt
yolov5_ROS/ros_yolo/scripts/: detect.py  final_yolo.py  fps.py
