<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_lab8</name>
  <version>0.0.0</version>
  <description>The f1tenth_lab8 package</description>

  <maintainer email="cheesungyeng@gmail.com">redy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags2_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>apriltags2_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>apriltags2_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
